--- a/web/css/dark.css
+++ b/web/css/dark.css
@@ -243,9 +243,9 @@ input[type="text"]:focus, textarea:focus, select:focus {
 /* Neumorphic Button */
 .browse-btn {
   position: absolute;
-  right: 5px;
-  top: 5px;
-  height: calc(100% - 10px);
+  right: 0px;
+  top: 0px;
+  height: calc(50% + 5px);
   background: linear-gradient(145deg, var(--primary-color), var(--primary-dark));
   color: white;
   border: none;
@@ -541,7 +541,7 @@ footer {
 .theme-selector label {
   color: var(--text-color);
   font-size: 0.9em;
-  margin: 0;
+  margin: -10px 10px 20px 30px;
 }
 
 .theme-selector i {
