--- a/web/css/girly.css
+++ b/web/css/girly.css
@@ -243,9 +243,9 @@ input[type="text"]:focus, textarea:focus, select:focus {
 /* Neumorphic Button */
 .browse-btn {
   position: absolute;
-  right: 5px;
-  top: 5px;
-  height: calc(100% - 10px);
+  right: 0px;
+  top: 0px;
+  height: calc(50% + 5px);
   background: linear-gradient(145deg, var(--secondary-color), var(--primary-dark));
   color: white;
   border: none;
